Refactor Google Drive module